--- a/Progress_Steps/style.css
+++ b/Progress_Steps/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 body{
+    background-color: antiquewhite;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,7 +23,7 @@ body{
     /* left: 300px; */
 }
 
-.progress-container ::before{
+.progress-container::before{
     content: '';
     background-color: #e0e0e0;
     position:absolute;
@@ -40,7 +41,44 @@ body{
     left: 0%;
     transform: translateY(-50%);
     height: 4px;
-    width: 50%;
+    width: 0%;
     z-index: -1;
     transition: .4s ease;
+}
+.circle{
+    background-color: white;
+    color: #999;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid #e0e0e0;
+    transition: .4s ease;
+}
+
+.circle.active{
+    border-color: blue;
+}
+
+.btn{
+    background-color: blue;
+    color: white;
+    border: 0px;
+    border-radius: 6px;
+    padding: 8px 30px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.btn:active{
+    transform: scale(.20);
+}
+.btn:focus{
+    outline: 0;
+}
+.btn:disabled{
+    background-color:#e0e0e0;
+    cursor: not-allowed;
 }
